2009-11-09  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/directtcp-target.c (directtcp_target_listen,
	  directtcp_target_accept): don't assert for !self->in_file or
				    self->access_mode == ACCESS_NULL.

2009-11-06  Dustin J. Mitchell <dustin@zmanda.com>
	* AUTHORS: add Ben Slusky
	* common-src/amcrypt-ossl-asym.sh common-src/amcrypt-ossl.sh: change
	  to UMD license, with Ben's permission

2009-11-05  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup-dump.c, client-src/sendsize.c:
	  Fix compiler error if VXDUMP or VDUMP is defined.

2009-11-05  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c: close FILE instead of fd.
	* client-src/selfcheck.c: fix fd leak with app_stderr.

2009-11-05  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c (merge_property, merge_properties):
						 New functions.
	* client-src/client_util.h: New prototypes.
	* common-src/conffile.c (amandaify_property_name): New function.
	* common-src/conffile.h (amandaify_property_name): New prototypes.
	* recover-src/extract_list.c: Call merge_properties, it merge property
	  from amanda header with property set in amrecover.
	  Report the directory property if set.
	* recover-src/set_commands.c: Call amandaify_property_name.

2009-11-03  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/xfer-dest-taper-splitter.c: make disk_cache_thread wait
	  to be un-paused before starting to cache a part
	* xfer-src/dest-null.c: add additional debugging info

2009-11-03  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/Makefile.am device-src/directtcp-target.c
	  device-src/directtcp-target.h: add new DirectTCPTarget interface, for
	  use by devices supporting DirectTCP

2009-11-03  Paul C. Mantz  <pcmantz@zmanda.com>
	* perl/Amanda/Report.pm: added state flags
	* instalcheck/Amanda_Report.pl: tests

2009-11-02  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/testutils.c: fix uninitialized variable, only run one